ejercicio15Streamlit/Expr15Parser.py
# Generated from Expr15.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Expr15Parser ( Parser ):

    grammarFileName = "Expr15.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'sudo'", "'nmap'", "'ss'", "'tcpdump'", 
                     "'curl'", "'dig'", "'journalctl'", "'grep'", "'ufw'" ]

    symbolicNames = [ "<INVALID>", "SUDO", "NMAP", "SS", "TCPDUMP", "CURL", 
                      "DIG", "JOURNALCTL", "GREP", "UFW", "OPCION_CORTA", 
                      "OPCION_LARGA", "RANGO_IP", "IP", "RUTA", "DOMINIO", 
                      "CADENA", "PALABRA", "NUMERO", "COMENTARIO_LINEA", 
                      "WS" ]

    RULE_root = 0
    RULE_linea = 1
    RULE_comando = 2
    RULE_opcion = 3
    RULE_valor = 4

    ruleNames =  [ "root", "linea", "comando", "opcion", "valor" ]

    EOF = Token.EOF
    SUDO=1
    NMAP=2
    SS=3
    TCPDUMP=4
    CURL=5
    DIG=6
    JOURNALCTL=7
    GREP=8
    UFW=9
    OPCION_CORTA=10
    OPCION_LARGA=11
    RANGO_IP=12
    IP=13
    RUTA=14
    DOMINIO=15
    CADENA=16
    PALABRA=17
    NUMERO=18
    COMENTARIO_LINEA=19
    WS=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Expr15Parser.EOF, 0)

        def linea(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Expr15Parser.LineaContext)
            else:
                return self.getTypedRuleContext(Expr15Parser.LineaContext,i)


        def getRuleIndex(self):
            return Expr15Parser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)




    def root(self):

        localctx = Expr15Parser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1022) != 0):
                self.state = 10
                self.linea()
                self.state = 15
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 16
            self.match(Expr15Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self):
            return self.getTypedRuleContext(Expr15Parser.ComandoContext,0)


        def getRuleIndex(self):
            return Expr15Parser.RULE_linea

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinea" ):
                listener.enterLinea(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinea" ):
                listener.exitLinea(self)




    def linea(self):

        localctx = Expr15Parser.LineaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_linea)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.comando()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NMAP(self):
            return self.getToken(Expr15Parser.NMAP, 0)

        def SUDO(self):
            return self.getToken(Expr15Parser.SUDO, 0)

        def opcion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Expr15Parser.OpcionContext)
            else:
                return self.getTypedRuleContext(Expr15Parser.OpcionContext,i)


        def valor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Expr15Parser.ValorContext)
            else:
                return self.getTypedRuleContext(Expr15Parser.ValorContext,i)


        def SS(self):
            return self.getToken(Expr15Parser.SS, 0)

        def TCPDUMP(self):
            return self.getToken(Expr15Parser.TCPDUMP, 0)

        def CURL(self):
            return self.getToken(Expr15Parser.CURL, 0)

        def DIG(self):
            return self.getToken(Expr15Parser.DIG, 0)

        def JOURNALCTL(self):
            return self.getToken(Expr15Parser.JOURNALCTL, 0)

        def GREP(self):
            return self.getToken(Expr15Parser.GREP, 0)

        def CADENA(self):
            return self.getToken(Expr15Parser.CADENA, 0)

        def UFW(self):
            return self.getToken(Expr15Parser.UFW, 0)

        def getRuleIndex(self):
            return Expr15Parser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = Expr15Parser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comando)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 20
                    self.match(Expr15Parser.SUDO)


                self.state = 23
                self.match(Expr15Parser.NMAP)
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10 or _la==11:
                    self.state = 24
                    self.opcion()
                    self.state = 29
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 520192) != 0):
                    self.state = 30
                    self.valor()
                    self.state = 35
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.match(Expr15Parser.SS)
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10 or _la==11:
                    self.state = 37
                    self.opcion()
                    self.state = 42
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 43
                    self.match(Expr15Parser.SUDO)


                self.state = 46
                self.match(Expr15Parser.TCPDUMP)
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10 or _la==11:
                    self.state = 47
                    self.opcion()
                    self.state = 52
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 520192) != 0):
                    self.state = 53
                    self.valor()
                    self.state = 58
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.match(Expr15Parser.CURL)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10 or _la==11:
                    self.state = 60
                    self.opcion()
                    self.state = 65
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 520192) != 0):
                    self.state = 66
                    self.valor()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.match(Expr15Parser.DIG)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 520192) != 0):
                    self.state = 73
                    self.valor()
                    self.state = 78
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 79
                self.match(Expr15Parser.JOURNALCTL)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10 or _la==11:
                    self.state = 80
                    self.opcion()
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 520192) != 0):
                    self.state = 86
                    self.valor()
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 92
                self.match(Expr15Parser.GREP)
                self.state = 93
                self.match(Expr15Parser.CADENA)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 520192) != 0):
                    self.state = 94
                    self.valor()
                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 100
                    self.match(Expr15Parser.SUDO)


                self.state = 103
                self.match(Expr15Parser.UFW)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 520192) != 0):
                    self.state = 104
                    self.valor()
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpcionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPCION_CORTA(self):
            return self.getToken(Expr15Parser.OPCION_CORTA, 0)

        def OPCION_LARGA(self):
            return self.getToken(Expr15Parser.OPCION_LARGA, 0)

        def getRuleIndex(self):
            return Expr15Parser.RULE_opcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpcion" ):
                listener.enterOpcion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpcion" ):
                listener.exitOpcion(self)




    def opcion(self):

        localctx = Expr15Parser.OpcionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_opcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not(_la==10 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RANGO_IP(self):
            return self.getToken(Expr15Parser.RANGO_IP, 0)

        def IP(self):
            return self.getToken(Expr15Parser.IP, 0)

        def RUTA(self):
            return self.getToken(Expr15Parser.RUTA, 0)

        def DOMINIO(self):
            return self.getToken(Expr15Parser.DOMINIO, 0)

        def CADENA(self):
            return self.getToken(Expr15Parser.CADENA, 0)

        def PALABRA(self):
            return self.getToken(Expr15Parser.PALABRA, 0)

        def NUMERO(self):
            return self.getToken(Expr15Parser.NUMERO, 0)

        def getRuleIndex(self):
            return Expr15Parser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)




    def valor(self):

        localctx = Expr15Parser.ValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_valor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 520192) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





